イベントフォーマットの変更
